# computacao-grafica-univali-diegoS

./: C01_Exemplo  C01_Exemplo.cpp  README.md  ml_environment_setup.md  requirements_recriada.txt  teste_glut.ipynb  teste_glut.py
glut_opengl_estudos/: 01_janela_e_triangulo.cpp  01_janela_e_triangulo.ipynb  01_janela_e_triangulo.py  02_primitivas_e_sistema_de_coordenadas.cpp  02_primitivas_e_sistema_de_coordenadas.ipynb  02_primitivas_e_sistema_de_coordenadas.py  03_transformacoes_animacao_timer.cpp  03_transformacoes_animacao_timer.ipynb  03_transformacoes_animacao_timer.py  04_entrada_teclado_mouse.cpp  04_entrada_teclado_mouse.ipynb  04_entrada_teclado_mouse.py  05_reshape_viewport_projecao.cpp  05_reshape_viewport_projecao.ipynb  06_double_buffer_fps.cpp  06_double_buffer_fps.ipynb  06_double_buffer_fps.py  07_mini_projeto_sistema_solar_2d.cpp  07_mini_projeto_sistema_solar_2d.ipynb  07_mini_projeto_sistema_solar_2d.py  08_scene_graph_hierarquico_2d.cpp  08_scene_graph_hierarquico_2d.ipynb  08_scene_graph_hierarquico_2d.py  09_picking_colisoes_aabb.cpp  09_picking_colisoes_aabb.ipynb  09_picking_colisoes_aabb.py  10_sistema_particulas_blending.cpp  10_sistema_particulas_blending.ipynb  10_sistema_particulas_blending.py  11_jogo_pong.cpp  11_jogo_pong.ipynb  11_jogo_pong.py  12_jogo_snake.cpp  12_jogo_snake.ipynb  12_jogo_snake.py  13_jogo_breakout.cpp  13_jogo_breakout.ipynb  13_jogo_breakout.py  14_jogo_tetris.cpp  14_jogo_tetris.ipynb  (+12 more)
glut_opengl_estudos/.build_cpp/: aula_1  aula_11
glut_opengl_estudos/.ipynb_checkpoints/: 01_janela_e_triangulo-checkpoint.ipynb  (+15 more)
(+21 files in other folders)
